# fast-profile_service

./: .env.sample  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 0ec46eed3903_initial_profile_model.py
app/api/: dependencies.py  endpoints.py
app/api/routers/: endpoints.py  upload_icon.py
app/core/: config.py  database.py  redis_client.py  s3_client.py
app/models/: profile.py
app/schemas/: profile.py
tests/: conftest.py  test_api.py
